amended styling on vote widget on bill page and attachment section on issue post on mobile

--- a/scss/bill/_bill.scss
+++ b/scss/bill/_bill.scss
@@ -238,6 +238,9 @@
 .no-chart {
   .vote-widget {
     height: 100px;
+    @include media(560px) {
+      height: auto;
+    }
   }
   .card {
     width: calc(50% - 10px);
