--- a/scss/issues/_main.scss
+++ b/scss/issues/_main.scss
@@ -184,6 +184,7 @@
 
 .issue-attachments {
   overflow: hidden;
+  max-width: 100%;
   height: 35px;
   border: 1px solid $widgetborder;
   border-bottom-left-radius: 3px;
@@ -191,16 +192,20 @@
   background: lighten($greylight, 5%);
   .attachment {
     border-right: 1px solid $widgetborder;
-    max-width: 250px;
-    white-space: nowrap;
+    max-width: 50%;
     overflow: hidden;
-    text-overflow: ellipsis;
     color: lighten(desaturate($blue, 20%), 15%);
     @include font-size(11px);
     i {
       @include font-size(12px);
       line-height: 35px;
       margin-right: 5px;
+    }
+    p {
+    overflow: hidden;
+    display: -webkit-box;
+    -webkit-line-clamp: 1;
+    -webkit-box-orient: vertical;
     }
   }
 }
